...
              ),
            );
          },
        ),
        const SizedBox(height: 20),
        const Text(
          'SCORES FINAUX',
          style: TextStyle(
            color: Colors.white,
            fontSize: 32,
            fontWeight: FontWeight.w900,
            letterSpacing: 4,
          ),
...
